# mqtt-to-aprs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: example_config.toml
mqtt_to_aprs/: config.py
mqtt_to_aprs/cli/: __init__.py  config.py  run.py
mqtt_to_aprs/utils/: aprs_is.py  kiss.py  mqtt.py  service.py
mqtt_to_aprs/utils/message/: json.py
mqtt_to_aprs/utils/packet/: __init__.py  weather.py
mqtt_to_aprs/utils/translator/: __init__.py  jmespath.py
tests/fixtures/config/invalid/: invalid_config.toml
